--- a/vue-socket-chat/package.json
+++ b/vue-socket-chat/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "npm": "^8.13.2",
     "primeicons": "^5.0.0",
     "primevue": "^3.15.0",
