--- a/vue-socket-chat/package.json
+++ b/vue-socket-chat/package.json
@@ -2,7 +2,7 @@
   "name": "vue-socket-chat",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
@@ -12,6 +12,7 @@
   "dependencies": {
     "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "npm": "^8.13.2",
     "primeicons": "^5.0.0",
     "primevue": "^3.15.0",
