--- a/vue-socket-chat/package.json
+++ b/vue-socket-chat/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "firebase": "^9.9.0",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
